<resources>
    <string name="FAN_SPEED">Fan Speed</string>
    <string name="HUMIDITY">Humidity</string>
    <string name="LED">LED</string>
    <string name="LED10">LED</string>
    <string name="LED2">LED</string>
    <string name="PM_10">PM 10</string>
    <string name="PM_2_5">PM 2.5</string>
    <string name="POLLUTION">Pollution</string>
    <string name="PRESSURE">Pressure</string>
    <string name="SET">Auto Settings</string>
    <string name="SLEEP_MODE">SLEEP_MODE</string>
    <string name="TEMPERATURE">Temperature</string>
    <string name="TIMER">Timer</string>
    <string name="VOC">VOC</string>
    <string name="abb_friday">F</string>
    <string name="abb_monday">M</string>
    <string name="abb_saturday">S</string>
    <string name="abb_sunday">S</string>
    <string name="abb_thursday">T</string>
    <string name="abb_tuesday">T</string>
    <string name="abb_wednesday">W</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_privacy_policy">Please accept Privacy Policy</string>
    <string name="accept_terms_and_conditions">Please accept Terms and Conditions</string>
    <string name="account">Account</string>
    <string name="account_created">Account created</string>
    <string name="account_not_activated">Account not activated</string>
    <string name="acquiring_device_status">Acquiring device status Please wait.</string>
    <string name="activation_message">An activation email has been sent to email you\'ve provided. Please activate your account before login.</string>
    <string name="active">active</string>
    <string name="add_new_device">Add New Device</string>
    <string name="add_new_room">Add new room</string>
    <string name="add_photo">Add photo</string>
    <string name="add_room">Add room</string>
    <string name="add_schedule">Add schedule</string>
    <string name="address_found">Address found</string>
    <string name="air_purifier">Air Purifier</string>
    <string name="air_sensor">Air Sensor</string>
    <string name="ap_model_fix">Please select correct model. Fixing it.</string>
    <string name="app_name">IDEAL Air Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aqi">aqi</string>
    <string name="aqi_good">good</string>
    <string name="aqi_hazardous">hazardous</string>
    <string name="aqi_moderate">moderate</string>
    <string name="aqi_somewhat_unhealthy">unhealthy</string>
    <string name="aqi_type">EU AQI</string>
    <string name="aqi_unhealthy">unhealthy</string>
    <string name="aqi_unknown">unknown</string>
    <string name="aqi_very_unhealthy">very unhealthy</string>
    <string name="aqs10">AS10</string>
    <string name="arrow_right">Right grey arrow</string>
    <string name="attach_device_to_room">Attach device to the room</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_history_backwards">check history backwards</string>
    <string name="btn_history_forward">check history forward</string>
    <string name="bullet">\t • </string>
    <string name="cancel">Cancel</string>
    <string name="cannot_display_contacts_without_permissions">Without granting permissions, contacts cannot be displayed</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_email_client">Choose an Email client:</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="command_relayed">Command relayed. Wait a moment to execute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_to_user_wifi">Please connect to \"%1$s\" network and return to the application</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="connection_error_pairing">Wifi-Connection error 404: Please try with different mobile device or contact your dealer for further instructions.</string>
    <string name="copy">Copy</string>
    <string name="could_not_save_space">Could not save </string>
    <string name="crash_toast_text">Sorry, the application crashed. Report will be sent to the developers.</string>
    <string name="current_password">Current password</string>
    <string name="default_map_marker_title">Measure Point</string>
    <string name="default_web_client_id">645185793211-e5lg12sfgk3pjf0sqb47gigbgur7459d.apps.googleusercontent.com</string>
    <string name="delete_room">Delete room</string>
    <string name="device_found">Device found</string>
    <string name="device_image_preview">Device image preview</string>
    <string name="device_list_item_ap">Air purifier</string>
    <string name="device_move_successful">Device successfully moved</string>
    <string name="device_move_unsuccessful">Device could not be moved</string>
    <string name="device_not_found">Device not found</string>
    <string name="device_power_button">Device power button</string>
    <string name="device_removal_successful">Device successfully removed</string>
    <string name="device_removal_unsuccessful">Device could not be deleted</string>
    <string name="edit">Edit</string>
    <string name="edit_room">Edit room</string>
    <string name="email">Email</string>
    <string name="email_label">E-mail:</string>
    <string name="email_reset_instructions">An email with password reset instructions sent</string>
    <string name="faq">FAQ</string>
    <string name="ideal_logo">Ideal logo</string>
    <string name="legal">Legal</string>
    <string name="manual">Manual</string>
    <string name="new_password">New password</string>
    <string name="outdoor_air_pollution_data_provided_by">Outdoor air pollution data provided by:</string>
    <string name="password_change">Change password</string>
    <string name="phone_label">Phone:</string>
    <string name="privacy_policy_big">Privacy policy</string>
    <string name="recommendation_first">Dear IDEAL user, based on measurements, we will send you two types of recommendations:\n    </string>
    <string name="recommendation_freq_1">Frequency of recommendation:</string>
    <string name="recommendation_freq_2">Once per day (if applicable)</string>
    <string name="recommendation_second_1">1. Action</string>
    <string name="recommendation_second_2">Ventilate room (e.g open the window) in case your VOC increase</string>
    <string name="recommendation_second_3">Stop ventilate (e.g close the window) when your VOC decrease</string>
    <string name="recommendation_second_4">Switch on Air Purifier to clean particles PM 2,5 / PM 10</string>
    <string name="recommendation_second_5">Switch off Air Purifier to save energy once your personal air is good enough</string>
    <string name="recommendation_third_1">2. Health</string>
    <string name="recommendation_third_2">If last 30 days you breath bad air quality be careful of potential low immunity - we will tell you how many time you spend in bad air</string>
    <string name="recommendation_third_3">If last year you breath bad air quality, then go to health check - we will tell you how many time you spend in bad air</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="sensor_community">Sensor community</string>
    <string name="support">Support</string>
    <string name="support_email">center@ideal.de</string>
    <string name="support_phone">+49 (0) 7433-269-0</string>
    <string name="support_web">www.ideal.de</string>
    <string name="technical_assistance">Technical Assistance</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="title_recommendations_info">How the recommendation works</string>
    <string name="versioning">Version: %1$s-%2$d-%3$s %4$s</string>
    <string name="web_label">Web:</string>
</resources>