<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ToolbarTheme"
        android:id="@+id/activity_support_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/support"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_36dp"
                android:text="@string/technical_assistance"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_label"
                    android:layout_marginHorizontal="@dimen/margin_16dp"/>
                <TextView
                    android:textAppearance="@style/LinkItem"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_web"
                    android:onClick="handleRedirectToIdealWeb"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:layout_marginHorizontal="@dimen/margin_16dp"/>
                <TextView
                    android:textAppearance="@style/LinkItem"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_email"
                    android:onClick="handleEmailSupport"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_label"
                    android:layout_marginHorizontal="@dimen/margin_16dp"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_phone"/>
            </LinearLayout>
            <TextView
                android:textAppearance="@style/LinkItem"
                android:textSize="@dimen/text_size_22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/manual"
                android:onClick="handleRedirectToManual"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@style/LinkItem"
                android:textSize="@dimen/text_size_22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:onClick="handleRedirectToFaq"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginVertical="@dimen/margin_24dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
