<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ToolbarTheme"
        android:id="@+id/activity_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/about"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/versioning"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/legal"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/button_link_terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/terms_and_conditions"
                android:onClick="handleShowTermsAndConditions"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/button_link_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/privacy_policy_big"
                android:onClick="handleShowPrivacyPolicy"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:id="@+id/odata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/outdoor_air_pollution_data_provided_by"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/odata_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/sensor_community"
                android:onClick="handleSensorCommunityLink"
                android:layout_marginHorizontal="@dimen/margin_16dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
