<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/settings_fragment_padding">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/title_recommendations_info"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:text="@string/recommendation_first"/>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/recommendation_second_1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_second_2"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_second_3"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_second_4"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_second_5"/>
            </LinearLayout>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/recommendation_third_1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_third_2"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_third_3"/>
            </LinearLayout>
            <TextView
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="@dimen/text_size_15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/recommendation_freq_1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp">
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet"/>
                <TextView
                    android:textAppearance="@android:style/TextAppearance"
                    android:textSize="@dimen/text_size_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendation_freq_2"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
