<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="64dp"
                android:scaleType="fitStart"
                android:contentDescription="@string/ideal_logo"
                app:srcCompat="@drawable/ideal_logo"/>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/TextInputLayoutAppearance"
                android:id="@+id/input_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:background="@drawable/style_edit_text"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:autofillHints="email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/TextInputLayoutAppearance"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:background="@drawable/style_edit_text"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:theme="@style/TextInputLayoutAppearance"
                android:id="@+id/input_repeated_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:background="@drawable/style_edit_text"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_new_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:imeOptions="actionGo"
                    android:autofillHints="no"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">
                <ProgressBar style="@style/ButtonSpinner"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_change"
                    style="@style/SolidButton"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
